@@ -1,4 +1,8 @@
 Changes in quota-tools from 3.12 to 3.13
+* minor manpage and help-text fixes (Jan Kara)
+* fixed quotacheck(8) to check each block only once (Jan Kara)
+* fixed quotacheck(8) messages about corrupted blocks (Jan Kara)
+* fixed quotacheck(8) to rename quota files after turning quotas off (Jan Kara)
 * added sanity check to quota reporting (Jan Kara)
 * fixed check for illegal references in quotacheck(8) (Jan Kara)
 * added NFSv4 to the list of supported fs types (Jan Kara)
